- `readJSONFile()`
  - renamed to `readJsonFile()`
  - extracted (unused)
- `readYamlConfigFile()`
  - extracted (unused)
- `convertAiColor()`
  - renamed to `aiColorToCss()`
  - refactored source
  - added unit tests
  - extracted `darkGrayToBlack()`